feat(01): basic HTML elements

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,6 +7,13 @@
   </head>
   <!-- 欢迎加入电子系科协，共同享受网页开发的乐趣 -->
   <body>
-    这里是网页的主体内容
+    <div>
+      <h1>这是一个趣味会议软件</h1>
+      <p>同时也是2024科协暑培网站部分的学习性工程</p>
+      <br />
+      <a href="./main.html">进入主页</a>
+      &nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="./about.html" target="_blank">关于这个工程</a>
+    </div>
   </body>
 </html>
