--- a/frontend/public/main.html
+++ b/frontend/public/main.html
@@ -6,6 +6,13 @@
     <title>一个趣味会议软件</title>
   </head>
   <body>
-    Main Page
+    <div>
+      <a href="./index.html">返回首页</a>
+      <br /><br />
+      这里目前什么都没有哦，请欣赏音乐吧~
+      <br /><br />
+      &copy;&nbsp;李健《风吹麦浪》
+    </div>
+    <audio src="./assets/李健-风吹麦浪.mp3" controls autoplay></audio>
   </body>
 </html>
