--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,12 +4,22 @@
     <meta charset="utf-8" />
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon.png" />
     <title>2024科协暑培网站Demo</title>
+    <style>
+      body {
+        height: 100vh;
+        margin: 0;
+        background-image: url("./assets/tsinghua-fall.jpg");
+        background-size: cover;
+        background-repeat: no-repeat;
+      }
+    </style>
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <!-- 欢迎加入电子系科协，共同享受网页开发的乐趣 -->
   <body>
-    <div>
-      <h1>这是一个趣味会议软件</h1>
-      <p>同时也是2024科协暑培网站部分的学习性工程</p>
+    <div id="index-main-frame">
+      <h1 style="color: purple;">这是一个趣味会议软件</h1>
+      <p style="color: darkred;">同时也是2024科协暑培网站部分的学习性工程</p>
       <br />
       <a href="./main.html">进入主页</a>
       &nbsp;&nbsp;&nbsp;&nbsp;
