--- a/frontend/public/main.html
+++ b/frontend/public/main.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon.png" />
     <title>一个趣味会议软件</title>
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
     <div>
@@ -13,6 +14,6 @@
       <br /><br />
       &copy;&nbsp;李健《风吹麦浪》
     </div>
-    <audio src="./assets/李健-风吹麦浪.mp3" controls autoplay></audio>
+    <audio id="main-background-music" src="./assets/李健-风吹麦浪.mp3" controls autoplay></audio>
   </body>
 </html>
