feat(01): different CSS selectors

--- a/frontend/public/about.html
+++ b/frontend/public/about.html
@@ -14,11 +14,11 @@
   </head>
   <body>
     <div id="about-main-frame">
-      <div id="outer">
+      <div class="card" id="outer">
         <div id="left">
-          <img src="./assets/EESAST2024.jpg" alt="EESAST 2024" title="EESAST 2024" width="330" height="185"/>
+          <img class="card" id="img" src="./assets/EESAST2024.jpg" alt="EESAST 2024" title="EESAST 2024" width="330" height="185"/>
           <hr />
-          <div>
+          <div class="card">
             <form method="post" action="#">
               <h3>联系我们</h3>
               <p>
@@ -45,9 +45,9 @@
             </form>
           </div>
         </div>
-        <div id="right">
+        <div class="card" id="right">
           <h3>我们是电子系学生科协</h3>
-          <table border="1px">
+          <table border="1px" class="styled-table">
             <tr>
               <th>官网</th>
               <td><a href="https://eesast.com" target="_blank"><em>eesast.com</em></a></td>
@@ -58,12 +58,12 @@
             </tr>
           </table>
           <h3>本项目是暑培(网站部分)的学习性工程</h3>
-          <ul>
+          <ul class="styled-list">
             <li><strong>主题</strong>：一个趣味会议软件</li>
             <li><strong>功能需求</strong>：用户创建和登录、会议创建和加入、会议中倒计时、随机点名等</li>
           </ul>
           <h3>这个工程分为6个循序渐进的部分</h3>
-          <ol>
+          <ol class="styled-list">
             <li>HTML&CSS</li>
             <li>JS&TS</li>
             <li>DataBase (SQL&GraphQL)</li>
