--- a/frontend/public/main.html
+++ b/frontend/public/main.html
@@ -14,6 +14,6 @@
       <br /><br />
       &copy;&nbsp;李健《风吹麦浪》
     </div>
-    <audio id="main-background-music" src="./assets/李健-风吹麦浪.mp3" controls autoplay></audio>
+    <audio id="main-background-music" src="./assets/李健-风吹麦浪.mp3" controls autoplay loop></audio>
   </body>
 </html>
