feat(02): interact with the internet

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -30,5 +30,6 @@
       <a href="./about.html" target="_blank">关于这个工程</a>
     </div>
     <p id="clock">当前时间加载中... ...</p>
+    <p id="motto">每日一句加载中... ...</p>
   </body>
 </html>
